correction version mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,12 +286,14 @@
     }
 
     h2 {
+        text-align: center;
         font-size: 30px;
         margin-top: 5%;
     }
 
     h3 {
         font-size: 20px;
+        text-align: center;
         margin-bottom: 3%;
     }
 
@@ -363,7 +365,7 @@
     .formation ul li {
         color: rgb(181, 180, 180);
         list-style: none;
-        margin-left: 3%;
+        margin-left: 10%;
         margin-right: 4%;
         margin-top: 6%;
         margin-bottom: 6%;
@@ -383,21 +385,18 @@
         margin-bottom: 5%;
     }
 
-    .exp .flexFirst {
-        margin-left: 10%;
+    .exp p{
+        text-align: center;
+        margin-bottom: 10%;
     }
 
-    .exp .flexLeaf {
-        margin-left: 5%;
+    .exp h3{
+        text-align: center;
     }
 
-    .exp .flexAm {
-        margin-left: 7%;
-    }
-
-    .exp .flex {
-        margin-left: 10%;
-        margin-top: 10%;
+    .centerImg{
+        display: flex;
+        justify-content: center;
     }
 
     .exp p {
